--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
       content: '';
       position: absolute;
       top: 0; left: 0; right: 0; bottom: 0;
-      /* REVERSIÓN CLAVE: Volver a centrar la imagen */
-      background: url('images/fondo-soñado.jpg') center center / cover no-repeat; /* <--- MODIFICADO */
+      /* Imagen original (9:16) para móvil por defecto */
+      background: url('images/fondo-soñado.jpg') center center / cover no-repeat;
       z-index: -1;
       transition: transform 0.1s linear;
       transform: perspective(1000px) rotateX(var(--header-tilt-x, 0deg)) rotateY(var(--header-tilt-y, 0deg));
@@ -46,7 +46,7 @@
       width: 70%;
       height: auto;
       display: block;
-      margin: 0 auto 1em auto; /* Margen inferior base móvil */
+      margin: 0 auto 1em auto;
       position: relative;
       z-index: 1;
     }
@@ -61,7 +61,7 @@
     }
     nav {
        text-align: center;
-       margin: 40px 0; /* Margen base móvil */
+       margin: 40px 0;
        display: flex;
        flex-wrap: wrap;
        justify-content: center;
@@ -103,31 +103,32 @@
     /* --- Estilos específicos para pantallas grandes (Desktop) --- */
     @media (min-width: 992px) {
       header {
-        /* AJUSTE CLAVE: Hacer el header de altura completa */
-        min-height: 100vh; /* Antes 85vh */
+        min-height: 85vh; /* Altura ajustada */
         display: flex;
         flex-direction: column;
-        /* AJUSTE CLAVE: Volver a centrar contenido verticalmente */
-        justify-content: center; /* <--- RE-AÑADIDO */
+        justify-content: center; /* Centrado vertical */
         align-items: center;
         padding: 0 20px;
-        /* padding-top: 5vh; */ /* <-- ELIMINADO (ya no es necesario con justify-content) */
       }
+      /* Usar la imagen recortada y ajustar su posición vertical */
+      header::before {
+          background-image: url('images/fondo-sonado-desktop.jpg'); /* Asegúrate que este sea el nombre correcto */
+          /* AJUSTE CLAVE: Bajar ligeramente el centro vertical */
+          background-position: center 55%; /* Prueba 50%, 60%, etc. */
+      }
+
       .header-logo {
           max-width: 350px;
           width: auto;
-          /* Margen moderado bajo el logo */
-          margin-bottom: 2.5em; /* Ajusta según veas necesario */
+          margin-bottom: 2.5em;
       }
       .header-subtitle {
           opacity: 0;
           animation: fadeInRise 1.2s ease-out 0.3s forwards;
-          /* Opcional: margen inferior */
           margin-bottom: 1.5em;
       }
       header nav {
-         /* Margen moderado sobre nav */
-         margin-top: 30px; /* Ajusta según veas necesario */
+         margin-top: 30px;
          margin-bottom: 20px;
       }
     }
