Ajustar background-position del header para escritorio

--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
       }
       /* Ajustar posición de la imagen recortada */
       header::before {
-          /* AJUSTE CLAVE: Bajar el centro vertical */
-          background-position: center 60%; /* Antes 55%. Prueba 65% si necesita más */
+          /* AJUSTE CLAVE: Bajar MÁS el centro vertical */
+          background-position: center 70%; /* Antes 60% (o 55%). Prueba 65% si esto es mucho */
       }
 
       .header-logo {
