Ajustar background-position del header para escritorio

--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
       }
       /* Ajustar posición de la imagen recortada */
       header::before {
-          /* AJUSTE CLAVE: Bajar MÁS el centro vertical */
-          background-position: center 70%; /* Antes 60% (o 55%). Prueba 65% si esto es mucho */
+          /* AJUSTE CLAVE: Usar porcentaje MENOR para BAJAR la vista */
+          background-position: center 40%; /* Antes 70%. Prueba 35% si necesita bajar más */
       }
 
       .header-logo {
