Ajustar background-position del header para escritorio

--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
       }
       /* Ajustar posición de la imagen recortada */
       header::before {
-          /* AJUSTE CLAVE: Punto intermedio para balancear rostros */
-          background-position: center 45%; /* Antes 40%. */
+          /* AJUSTE CLAVE: Usar porcentaje MENOR para BAJAR la vista */
+          background-position: center 35%; /* Antes 40%/45%. Prueba 30% si necesita bajar más */
       }
 
       .header-logo {
